--- a/src/Dita/TrackingBundle/Resources/config/services.yml
+++ b/src/Dita/TrackingBundle/Resources/config/services.yml
@@ -2,3 +2,8 @@ services:
 #    dita_tracking.example:
 #        class: Dita\TrackingBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+    doctrine_mongo_db_param_converter:
+        class: Sensio\Bundle\FrameworkExtraBundle\Request\ParamConverter\DoctrineParamConverter
+        arguments: [ "@doctrine_mongodb" ]
+        tags:
+            - { name: request.param_converter }
